--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 }
 
 #container{
-    max-width: 480px;
+    width: 95%;
     margin: 20px auto;
     background-color: #000;
     color: #fff;
@@ -25,7 +25,7 @@ header h1{
     font-weight: normal;
 }
 #frm{
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -39,6 +39,7 @@ header h1{
     margin: 0 1em;
     text-align: right;
     font-size: 1.2em;
+    width: 50%;
 }
 
 #frm #quantity:focus{
@@ -65,7 +66,7 @@ header h1{
 }
 
 #frm button{
-    background: none;
+    background: black;
     border: 1px solid #fff;
     color: #fff;
     padding: 4px 8px;
@@ -132,3 +133,10 @@ footer{
     text-align:center;
     font-weight: 300;
 }
+
+@media only screen and (min-width: 768px) {
+    #container{
+        width: 576px;        
+    }
+}
+
